--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <h1>Picsum</h1>
     <h3>Random Image Generator ;)</h3>
     <button class="photo-btn">Get Images</button>
+    <div class="image"></div>
 </div>
     
 </body>
