--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <div class="container">
     <h1>Picsum</h1>
     <h3>Random Image Generator ;)</h3>
-    <button class="photo-btn">Get Images</button>
-    <div class="image"></div>
+    <button class="photo_btn">Get Images</button>
+    <div class="images"></div>
 </div>
     
 </body>
